--- a/style.css
+++ b/style.css
@@ -1,6 +1,18 @@
+:root {
+    --header-height: 83px;
+}
+@media only screen and (min-width: 768px) {
+    :root {
+        --header-height: 134px;
+    } 
+}
+
 body {
     height: 100vh;
     background-color: #e6e6e6;
+}
+header {
+    height: var(--header-height);
 }
 .header {
     background-color: #ffffff;
@@ -42,7 +54,7 @@ body {
     margin-right: 10px;
     margin-left: 0;
 }
-.section-header{
+/* .section-header{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -50,17 +62,55 @@ body {
     flex-wrap: wrap;
    padding-top: 7px;
    padding-right: 20px;
-}
-.off{
+} */
+/* .off{
     background-color: black; 
     padding: 0;  
     margin:0 ;
+} */
+@media only screen and (min-width: 768px) {
+    .hero-section {
+        height: calc(100vh - var(--header-height));
+    }
 }
-.item{
+.hero-section .owl-carousel {
+    height: 100%;
+    position: relative;
+}
+.hero-section .owl-carousel .owl-nav button {
+    height: 56px;
+    width: 56px;
+    background-color: #ffffff;
+    border-radius: 50%;
+    color: #000000;
+    font-size: 14px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50px;
+    transform: translateY(-50%);
+}
+.hero-section .owl-carousel .owl-nav button.owl-next {
+    left: auto;
+    right: 50px;
+}
+.hero-section .owl-carousel .owl-nav {
+    margin-top: 0;
+}
+.hero-section .owl-stage-outer {
+    height: 100%;
+}
+.hero-section .owl-stage {
+    height: 100%;
+}
+.hero-section .owl-item {
+    height: 100%;
+}
+.hero-item {
     background-size: cover;
     background-image: url(./dslr.jpg);
-    height: calc(100vh - 83px);
     background-repeat: no-repeat;
+    height: 100%;
 }
 .hero-content {
    
@@ -88,5 +138,47 @@ body {
     background-color: #fff;
     color: black;
 }
-
-
+.header-info {
+    background-color: #000000;
+    display: none;
+}
+@media only screen and (min-width: 768px) {
+    .header-info {
+        display: block;
+    }
+}
+.header-info__content {
+    display: flex;
+    flex-wrap: wrap;
+}
+.header-info__content--item {
+    color: #ffffff;
+    flex: 0 0 auto;
+    width: 33.33%;
+    text-align: center;
+}
+.header-info__content--item {
+    color: #ffffff;
+    flex: 0 0 auto;
+    width: 33.33%;
+    text-align: center;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    font-size: 14px;
+    line-height: 1.3;
+}
+.header-info__content--item:not(:last-child) {
+    border-right: 1px solid #CBCBCB;
+}
+@media only screen and (min-width: 768px) {
+    .header-info__content--item {
+        width: 33.33%;
+    }
+}
+@media only screen and (min-width: 992px) {
+    .header-info__content--item {
+        padding-top: 15px;
+        padding-bottom: 15px;
+        font-size: 16px;
+    }
+}
