--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@
 
 body {
     height: 100vh;
-    background-color: #e6e6e6;
+    background-color: #ffffff;
+    
 }
 header {
     height: var(--header-height);
@@ -182,3 +183,109 @@ header {
         font-size: 16px;
     }
 }
+.section-header{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #F2F2F2;
+    flex-wrap: wrap;
+    padding-bottom: 5px;
+    margin-bottom: 40px;
+    margin-top: 5px;
+}
+.section-header h2 {
+    font-size: 20px;
+    color: #000000;
+    margin-bottom: 10px;
+    padding-right: 10px;
+}
+
+.section-header a {
+    font-size: 16px;
+    color: #B22625;
+    text-decoration: none;
+    margin-bottom: 10px;
+}
+
+.text{
+    text-align: center;
+    padding-top: 5px;
+}
+.card{
+    height: 300px;
+}
+
+
+.hot_deals .owl-carousel .owl-nav button {
+    height: 56px;
+    width: 56px;
+    background-color: #4d4848;
+    border-radius: 50%;
+    color: #fcf6f6;
+    font-size: 14px;  
+    position: absolute;
+    top: 50%;
+    left: 50px;
+    transform: translateY(-50%);
+}
+.hot_deals .owl-carousel .owl-nav button.owl-next {
+    left: auto;
+    right: 50px;
+}
+.hot_deals .owl-carousel .owl-nav {
+    margin-top: 0;
+}
+.sale .owl-carousel .owl-nav button {
+    height: 56px;
+    width: 56px;
+    background-color: #fffbfb;
+    border-radius: 50%;
+    color: #f50d0d;
+    font-size: 14px;  
+    position: absolute;
+    top: 50%;
+    left: 50px;
+    transform: translateY(-50%);
+   
+   
+}
+.sale .owl-carousel .owl-nav button.owl-next {
+     left: auto;
+    right: 50px;
+}
+.sale .owl-carousel .owl-nav {
+    margin-top: 0;
+}
+.section-header a {
+    font-size: 16px;
+    color: #B22625;
+    text-decoration: none;
+    margin-bottom: 10px;
+}
+
+.section-header__tab {
+    margin-bottom: 10px;
+    padding-left: 0;
+}
+
+.section-header__tab li {
+    display: inline-block;
+    font-size: 16px;
+    color: #8F8F8F;
+    padding-right: 30px;
+}
+
+.section-header__tab li:last-child {
+    padding-right: 0;
+}
+.discover_main{
+    display: flex;
+    justify-content: space-between;
+}
+.black_text{
+    border-bottom: 1px dotted #f14747;
+}
+.w_text{
+    border-bottom: 1px dotted #f14747;
+}
+
