--- a/style.css
+++ b/style.css
@@ -130,22 +130,25 @@ header {
     padding-top: 50px;
 }
 .hero-content h2 {
-    color: #fff;
-    font-size: 35px;
-    margin-bottom: 12px;
-    line-height: 1.3;
+   font-size: 50px;
+   color: #fff;
+   font-weight: 400;
+   padding-top: 60px;
+   letter-spacing: 2px;
 }
 
 .hero-content p {
-    font-size: 15px;
-    margin-bottom: 20px;
+    padding-bottom: 5px;
     color: #fff;
 }
 .hero-content__button button {
-    padding: 12px 15px;
+    padding: 8px 20px;
     border: 0;
-    background-color: #fff;
-    color: black;
+    background-color: rgb(241, 10, 10);
+    color: rgb(255, 253, 253);
+    font-size: 10px;
+    font-weight: 300;
+    border-radius: 5px;
 }
 .header-info {
     background-color: #000000;
@@ -191,6 +194,7 @@ header {
         font-size: 16px;
     }
 }
+
 .section-header{
     display:flex;
     align-items: center;
@@ -222,7 +226,25 @@ header {
 .card{
     height: 300px;
 }
+.countdown{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+.countdown-item{
+   font-size: 15px;
+   width: 75px;
+   padding: 10px;
+   
 
+}
+.text_button button{
+    background-color:#B22625;
+    border-radius: 8px;
+    color: #fff;
+    border: 0;
+    padding: 8px 15px;
+}
 
 .hot_deals .owl-carousel .owl-nav button {
     height: 56px;
@@ -254,6 +276,7 @@ header {
     top: 50%;
     left: 50px;
     transform: translateY(-50%);
+    left:1546px;
    
    
 }
@@ -286,15 +309,33 @@ header {
 .section-header__tab li:last-child {
     padding-right: 0;
 }
+.discover{
+    margin-top: 0;
+    background-image: url(./dslr.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 50%;
+
+}
 .discover_main{
     display: flex;
     justify-content: space-between;
+    padding-top: 30px;
 }
 .black_text{
     border-bottom: 1px dotted #f14747;
+    color: #fff;
 }
 .w_text{
     border-bottom: 1px dotted #f14747;
+    color: rgb(204, 128, 128);
+}
+.button_discover button{
+    background-color:#B22625;
+    border-radius: 8px;
+    color: #fff;
+    border: 0;
+    padding: 8px 15px;
 }
 
 /**************/
