--- a/style.css
+++ b/style.css
@@ -1,68 +1,73 @@
 :root {
-    --header-height: 83px;
-}
-@media only screen and (min-width: 768px) {
-    :root {
-        --header-height: 134px;
-    } 
+  --header-height: 83px;
 }
 
+@media only screen and (min-width: 768px) {
+  :root {
+    --header-height: 134px;
+  }
+}
 body {
-    height: 100vh;
-    background-color: #ffffff;
-    
+  height: 100vh;
+  background-color: #ffffff;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 .color-red {
-    color: #B22625 !important;
+  color: #B22625 !important;
 }
+
 header {
-    height: var(--header-height);
+  height: var(--header-height);
 }
+
 .header {
-    background-color: #ffffff;
-    padding-top: 25px;
-    padding-bottom: 25px;
+  background-color: #ffffff;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
+
 .header-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
 .header-nav {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
+
 .header-nav li {
-    display: inline-block;
-    padding-left: 20px;
-    padding-right: 20px;
+  display: inline-block;
+  padding-left: 20px;
+  padding-right: 20px;
 }
-.header-nav li a{
-    text-decoration: none;
-    color: grey;
+
+.header-nav li a {
+  text-decoration: none;
+  color: grey;
 }
+
 .header-icon {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    
+  padding: 0;
+  margin: 0;
+  display: flex;
 }
+
 .header-icon li {
-    display: inline-block;
-    padding-left: 13px;
-    flex: 0 0 21px;
-
-
-    max-width: 21px;
-    width: 21px;
-    margin-right: 10px;
-    margin-left: 0;
+  display: inline-block;
+  padding-left: 13px;
+  flex: 0 0 21px;
+  max-width: 21px;
+  width: 21px;
+  margin-right: 10px;
+  margin-left: 0;
 }
+
 /* .section-header{
     display: flex;
     align-items: center;
@@ -78,173 +83,191 @@ header {
     margin:0 ;
 } */
 @media only screen and (min-width: 768px) {
-    .hero-section {
-        height: calc(100vh - var(--header-height));
-    }
+  .hero-section {
+    height: calc(100vh - var(--header-height));
+  }
 }
 .hero-section .owl-carousel {
-    height: 100%;
-    position: relative;
+  height: 100%;
+  position: relative;
 }
+
 .hero-section .owl-carousel .owl-nav button {
-    height: 56px;
-    width: 56px;
-    background-color: #ffffff;
-    border-radius: 50%;
-    color: #000000;
-    font-size: 14px;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50px;
-    transform: translateY(-50%);
+  height: 56px;
+  width: 56px;
+  background-color: #ffffff;
+  border-radius: 50%;
+  color: #000000;
+  font-size: 14px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50px;
+  transform: translateY(-50%);
 }
+
 .hero-section .owl-carousel .owl-nav button.owl-next {
-    left: auto;
-    right: 50px;
+  left: auto;
+  right: 50px;
 }
+
 .hero-section .owl-carousel .owl-nav {
-    margin-top: 0;
+  margin-top: 0;
 }
+
 .hero-section .owl-stage-outer {
-    height: 100%;
+  height: 100%;
 }
+
 .hero-section .owl-stage {
-    height: 100%;
+  height: 100%;
 }
+
 .hero-section .owl-item {
-    height: 100%;
+  height: 100%;
 }
+
 .hero-item {
-    background-size: cover;
-    background-image: url(./dslr.jpg);
-    background-repeat: no-repeat;
-    height: 100%;
+  background-size: cover;
+  background-image: url(./dslr.jpg);
+  background-repeat: no-repeat;
+  height: 100%;
 }
+
 .hero-content {
-   
-    text-align: center;
-    max-width: 450px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 50px;
+  text-align: center;
+  max-width: 450px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 50px;
 }
+
 .hero-content h2 {
-   font-size: 50px;
-   color: #fff;
-   font-weight: 400;
-   padding-top: 60px;
-   letter-spacing: 2px;
+  font-size: 50px;
+  color: #fff;
+  font-weight: 400;
+  padding-top: 60px;
+  letter-spacing: 2px;
 }
 
 .hero-content p {
-    padding-bottom: 5px;
-    color: #fff;
-}
-.hero-content__button button {
-    padding: 8px 20px;
-    border: 0;
-    background-color: rgb(241, 10, 10);
-    color: rgb(255, 253, 253);
-    font-size: 10px;
-    font-weight: 300;
-    border-radius: 5px;
-}
-.header-info {
-    background-color: #000000;
-    display: none;
-}
-@media only screen and (min-width: 768px) {
-    .header-info {
-        display: block;
-    }
-}
-.header-info__content {
-    display: flex;
-    flex-wrap: wrap;
-}
-.header-info__content--item {
-    color: #ffffff;
-    flex: 0 0 auto;
-    width: 33.33%;
-    text-align: center;
-}
-.header-info__content--item {
-    color: #ffffff;
-    flex: 0 0 auto;
-    width: 33.33%;
-    text-align: center;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    font-size: 14px;
-    line-height: 1.3;
-}
-.header-info__content--item:not(:last-child) {
-    border-right: 1px solid #CBCBCB;
-}
-@media only screen and (min-width: 768px) {
-    .header-info__content--item {
-        width: 33.33%;
-    }
-}
-@media only screen and (min-width: 992px) {
-    .header-info__content--item {
-        padding-top: 15px;
-        padding-bottom: 15px;
-        font-size: 16px;
-    }
+  padding-bottom: 5px;
+  color: #fff;
 }
 
-.section-header{
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid #F2F2F2;
-    flex-wrap: wrap;
-    padding-bottom: 5px;
-    margin-bottom: 40px;
-    margin-top: 5px;
+.hero-content__button button {
+  padding: 8px 20px;
+  border: 0;
+  background-color: #B22625;
+  color: rgb(255, 253, 253);
+  font-size: 10px;
+  font-weight: 300;
+  border-radius: 5px;
 }
+
+.header-info {
+  background-color: #000000;
+  display: none;
+}
+
+@media only screen and (min-width: 768px) {
+  .header-info {
+    display: block;
+  }
+}
+.header-info__content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.header-info__content--item {
+  color: #ffffff;
+  flex: 0 0 auto;
+  width: 33.33%;
+  text-align: center;
+}
+
+.header-info__content--item {
+  color: #ffffff;
+  flex: 0 0 auto;
+  width: 33.33%;
+  text-align: center;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  font-size: 14px;
+  line-height: 1.3;
+}
+
+.header-info__content--item:not(:last-child) {
+  border-right: 1px solid #CBCBCB;
+}
+
+@media only screen and (min-width: 768px) {
+  .header-info__content--item {
+    width: 33.33%;
+  }
+}
+@media only screen and (min-width: 992px) {
+  .header-info__content--item {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 16px;
+  }
+}
+.section-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid #F2F2F2;
+  flex-wrap: wrap;
+  padding-bottom: 5px;
+  margin-bottom: 40px;
+  margin-top: 5px;
+}
+
 .section-header h2 {
-    font-size: 20px;
-    color: #000000;
-    margin-bottom: 10px;
-    padding-right: 10px;
+  font-size: 20px;
+  color: #000000;
+  margin-bottom: 10px;
+  padding-right: 10px;
 }
 
 .section-header a {
-    font-size: 16px;
-    color: #B22625;
-    text-decoration: none;
-    margin-bottom: 10px;
+  font-size: 16px;
+  color: #B22625;
+  text-decoration: none;
+  margin-bottom: 10px;
 }
 
-.text{
-    text-align: center;
-    padding-top: 5px;
+.text {
+  text-align: center;
+  padding-top: 5px;
+  padding-right: 15px;
 }
-.card{
-    height: 300px;
-}
-.countdown{
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    
-}
-.countdown-item{
-   font-size: 15px;
-   width: 50px;
-   padding: 10px;
-   display: block;
 
+.card {
+  height: 300px;
 }
-.text_button button{
-    background-color:#B22625;
-    border-radius: 8px;
-    color: #fff;
-    border: 0;
-    padding: 8px 15px;
+
+.countdown {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+}
+
+.countdown-item {
+  font-size: 15px;
+  width: 50px;
+  padding: 10px;
+  display: block;
+}
+
+.text_button button {
+  background-color: #B22625;
+  border-radius: 8px;
+  color: #fff;
+  border: 0;
+  padding: 8px 15px;
 }
 
 /***.hot_deals .owl-carousel .owl-nav button {
@@ -263,65 +286,81 @@ header {
     left: auto;
     right: 50px;
 }**/
+.hot_deals .owl-carousel {
+  position: relative;
+}
 
 .hot_deals .owl-carousel .owl-nav button {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: #f8f5f5;
-    color: rgb(252, 40, 40); 
-    display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  color: #B22625;
+  display: block;
 }
-.hot_deals .owl-carousel .owl-nav{
-    position: absolute;
-    top: 50%;
-    left: -50;
-    transform: translateY(-50%);  
+
+.hot_deals .owl-carousel .owl-nav {
+  position: absolute;
+  top: 30%;
+  left: -8%;
+  transform: translateY(-50%);
+}
+
+.col-md-9 {
+  padding-left: 15px;
+}
+
+.featured-category__section .owl-carousel {
+  position: relative;
 }
 
 .featured-category__section .owl-carousel .owl-nav button {
-    height: 56px;
-    width: 56px;
-    background-color: #fffbfb;
-    border-radius: 50%;
-    color: #f50d0d;
-    font-size: 14px;  
-    position: absolute;
-    top: 50%;
-    left: 50px;
-    transform: translateY(-50%); 
+  height: 56px;
+  width: 56px;
+  color: #B22625;
+  font-size: 20px;
+  position: absolute;
+  top: 40%;
+  left: -40px;
+  transform: translateY(-50%);
+  margin: 0;
 }
+
 .featured-category__section .owl-carousel .owl-nav button.owl-next {
-     left: auto;
-    right: 50px;
+  margin: 0;
+  position: absolute;
+  top: 32%;
+  transform: translateX(1150px);
 }
+
 .featured-category__section .owl-carousel .owl-nav {
-    margin-top: 0;
+  margin-top: 0;
 }
+
 .section-header a {
-    font-size: 16px;
-    color: #B22625;
-    text-decoration: none;
-    margin-bottom: 10px;
+  font-size: 16px;
+  color: #B22625;
+  text-decoration: none;
+  margin-bottom: 10px;
 }
 
 .section-header__tab {
-    margin-bottom: 10px;
-    padding-left: 0;
+  margin-bottom: 10px;
+  padding-left: 0;
 }
 
 .section-header__tab li {
-    display: inline-block;
-    font-size: 16px;
-    color: #8F8F8F;
-    padding-right: 30px;
+  display: inline-block;
+  font-size: 16px;
+  color: #8F8F8F;
+  padding-right: 30px;
 }
 
 .section-header__tab li:last-child {
-    padding-right: 0;
+  padding-right: 0;
 }
-.discover{
-   
+
+/*.discover{
+
     margin-top: 0;
     background-image: url(./vintage-retro.jpg);
     background-repeat: no-repeat;
@@ -334,16 +373,16 @@ header {
     justify-content: space-between;
     padding-top: 10%;
     text-align: center;
-   
+
 }
 .black_text{
-    
-   
+
+
     color: rgb(14, 13, 13);
-    
+
 }
 .w_text{
-   
+
     color: #fff;
 }   
 .circle-one{
@@ -372,48 +411,128 @@ border-radius: 50%;
     color: #fff;
     border: 0;
     padding: 8px 15px;
-}
-
+}***/
 /**************/
 .product-card {
-    margin-bottom: 20px;
-    height: calc(100% - 20px);
+  margin-bottom: 20px;
+  height: calc(100% - 20px);
 }
+
 .product-card__box {
-    padding: 60px 15px;
-    background: #fff;
-    box-shadow: 0px 1px 94px 0px #e2dede8c;
-    position: relative;
-    margin-bottom: 15px;
+  padding: 60px 15px;
+  background: #fff;
+  box-shadow: 0px 1px 94px 0px rgba(226, 222, 222, 0.5490196078);
+  position: relative;
+  margin-bottom: 15px;
 }
+
 .product-card__box figure {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
+
 .product-card__box figure img {
-    height: 145px;
-    display: block;
+  height: 120px;
+  display: block;
+  width: 100%;
 }
+
 .product-card__info {
-    padding: 3px 10px;
-    font-size: 8px;
-    position: absolute;
-    top: 20px;
+  padding: 3px 10px;
+  font-size: 8px;
+  position: absolute;
+  top: 20px;
 }
+
 .product-card__info--left {
-    left: 15px;
+  left: 15px;
 }
+
 .product-card__info--right {
-    right: 15px;
+  right: 15px;
 }
+
 .product-card__info--red {
-    background-color: #B22625;
-    color: #ffffff;
+  background-color: #B22625;
+  color: #ffffff;
 }
+
 .product-card__info--blue {
-    background-color: #1066E9;
-    color: #ffffff;
+  background-color: #3a8d02;
+  color: #ffffff;
 }
+
 .owl-carousel .product-card {
-    margin-bottom: 0;
-    height: 100%;
+  margin-bottom: 0;
+  height: 100%;
 }
+
+.product-info_section {
+  display: flex;
+  height: 500px;
+  overflow: hidden;
+  position: relative;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+.product-info_section:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #0c0c0c;
+  width: calc(50% + 100px);
+  height: 100%;
+  transform: skewX(-16deg) translateX(-100px);
+}
+.product-info_section:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #0e0d0d;
+  width: calc(50% + 100px);
+  height: 100%;
+  transform: skewX(-16deg) translateX(100px);
+}
+.product-info_section .container {
+  position: relative;
+  z-index: 1;
+}
+.product-info_section--left {
+  padding-right: 130px;
+  color: #fff;
+}
+.product-info_section--left button {
+  background-color: #B22625;
+  border-radius: 8px;
+  color: #fff;
+  border: 0;
+  padding: 8px 15px;
+}
+.product-info_section--right {
+  padding-left: 130px;
+}
+.product-info_section--right .button1 {
+  display: block;
+  border-radius: 50%;
+  background-color: #000000;
+  color: #fff;
+  border: 5px solid #B22625;
+  padding: 15px 20px;
+  font-weight: 280;
+  font-size: 16px;
+  top: 50%;
+  transform: translate(115px, 30px);
+}
+.product-info_section--right .button2 {
+  display: block;
+  border-radius: 50%;
+  background-color: #000000;
+  color: #fff;
+  border: 5px solid #B22625;
+  padding: 13px 20px;
+  font-weight: 100;
+  font-size: 12px;
+  top: 50%;
+  transform: translate(185px, -145px);
+}/*# sourceMappingURL=style.css.map */
